[Fix]- Correction Url picture and property z-index in the header

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ body {
   height: 70px;
   width: 100vw;
   background: #FFF;
+  z-index: 4;
 }
 
 .wrapper {
